--- a/.vsts-ci.cloud.yml
+++ b/.vsts-ci.cloud.yml
@@ -25,7 +25,7 @@ steps:
 - task: dotNetCoreCLI@1
   inputs:
     command: publish
-    arguments: --configuration release --output $(Build.ArtifactStagingDirectory)
+    arguments: WhackAMole.MoleCloud/WhackAMole.MoleCloud.csproj --configuration release --output $(Build.ArtifactStagingDirectory)
     zipAfterPublish: true
   displayName: dotnet publish
 
