--- a/WhackAMole.MoleCloud/Dockerfile
+++ b/WhackAMole.MoleCloud/Dockerfile
@@ -2,5 +2,5 @@ FROM microsoft/aspnetcore:2.0.0-jessie
 ARG source
 WORKDIR /app
 EXPOSE 80
-COPY ${source:-obj/Docker/publish} .
+COPY ${source:-bin/Release/netcoreapp2.0/publish} .
 ENTRYPOINT ["dotnet", "WhackAMole.MoleCloud.dll"]
