--- a/helm/WhackAMole/Chart.yaml
+++ b/helm/WhackAMole/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 appVersion: "1.0"
 description: A Helm chart for MTC_WhackAMole.NET
-name: WhackAMole
+name: WhackAMole.NET
 version: 0.1.0
