--- a/WhackAMole.MoleCloud/Dockerfile
+++ b/WhackAMole.MoleCloud/Dockerfile
@@ -2,5 +2,5 @@ FROM microsoft/aspnetcore:2.0.0-jessie
 ARG source
 WORKDIR /app
 EXPOSE 8080
-COPY ${source:-bin/Debug/netcoreapp2.0/publish} .
+COPY .bin/Debug/netcoreapp2.0/publish .
 ENTRYPOINT ["dotnet", "WhackAMole.MoleCloud.dll", "--urls", "http://*:8080"]
