add new helm chart for kubeadmin

--- a/helm/KubeAdmin/values.yaml
+++ b/helm/KubeAdmin/values.yaml
@@ -1,6 +1,8 @@
 image:
-  repository: microsoft/mtc_whackamole.net
+  repository: microsoft/mtc_whackamole.net/kubeadmin
   tag: latest
+app:
+  name: KubeAdmin
 
 # service:
 #   type: LoadBalancer
