--- a/helm/KubeAdmin/templates/service.yaml
+++ b/helm/KubeAdmin/templates/service.yaml
@@ -1,10 +1,10 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: {{ .Release.Name }}-service
+  name: {{ .Release.Name }}
 spec:
   selector:
-    app: molecloud
+    app: {{.Values.app.name}}
   ports:
   - name: http
     port: 8080
