--- a/helm/MoleCloud/templates/deployment.yaml
+++ b/helm/MoleCloud/templates/deployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: {{ .Release.Name }}-deployment
+  name: {{ .Release.Name }}
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: molecloud
+      app: {{.Values.app.name}}
   template:
     metadata:
       labels:
-        app: molecloud
+        app: {{.Values.app.name}}
     spec:
       containers:
-      - name: molecloud
+      - name: {{.Values.app.name}}
         image: {{.Values.image.repository}}:{{.Values.image.tag}}
         imagePullPolicy: IfNotPresent
         ports:
