--- a/WhackAMole.KubeAdmin/Dockerfile
+++ b/WhackAMole.KubeAdmin/Dockerfile
@@ -1,6 +1,6 @@
-FROM microsoft/aspnetcore:2.0
+FROM microsoft/aspnetcore:2.0.0-jessie
 ARG source
 WORKDIR /app
 EXPOSE 80
-COPY ${source:-obj/Docker/publish} .
-ENTRYPOINT ["dotnet", "WhackAMole.KubeAdmin.dll"]
+COPY ./obj/Docker/publish .
+ENTRYPOINT ["dotnet", "WhackAMole.KubeAdmin.dll", "--urls", "http://*:80"]
