--- a/helm/mole-cloud/templates/deployment.yaml
+++ b/helm/mole-cloud/templates/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: {{ .Release.Name }}-deployment
+  name: {{ .Release.Name }}
 spec:
   replicas: 3
   selector:
