--- a/MoleDeploy.VstsControl/MoleDeploy.Vsts.csproj
+++ b/MoleDeploy.VstsControl/MoleDeploy.Vsts.csproj
@@ -1,19 +1,24 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net461</TargetFramework>
+    <TargetFramework>net472</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.13" />
+    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.14" />
     <PackageReference Include="Microsoft.VisualStudio.Services.Client" Version="15.134.0-preview" />
     <PackageReference Include="Microsoft.VisualStudio.Services.InteractiveClient" Version="15.134.0-preview" />
     <PackageReference Include="Microsoft.TeamFoundationServer.Client" Version="15.134.0-preview" />
     <PackageReference Include="Microsoft.VisualStudio.Services.Release.Client" Version="15.134.0-preview" />
-    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MoleDeploy.Contracts\MoleDeploy.Contracts.csproj" />
+    <ProjectReference Include="..\MoleDeploy.SignalR\MoleDeploy.SignalR.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Configuration" />
+    <Reference Include="System.Net.Http" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
