--- a/MoleDeploy.VstsControl/app.config
+++ b/MoleDeploy.VstsControl/app.config
@@ -2,8 +2,8 @@
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" PublicKeyToken="30ad4fe6b2a6aeed"/>
-        <bindingRedirect oldVersion="1.0.0-11.0.2" newVersion="11.0.2" />
+        <assemblyIdentity name="Newtonsoft.Json" PublicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="1.0.0.0-11.0.2.0" newVersion="11.0.2.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
