--- a/helm/mole-cloud/templates/ingress.yaml
+++ b/helm/mole-cloud/templates/ingress.yaml
@@ -3,7 +3,9 @@ kind: Ingress
 metadata:
   name: {{ .Release.Name }}
   annotations:
+    kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/ssl-redirect: false
 spec:
   rules:
   - http:
