--- a/WhackAMole.MoleCloud/Dockerfile
+++ b/WhackAMole.MoleCloud/Dockerfile
@@ -1,5 +1,6 @@
 FROM microsoft/aspnetcore:2.0.0-jessie
-ARG source
+ARG pod_color=7FC9FF
+ENV POD_COLOR=$pod_color
 WORKDIR /app
 EXPOSE 8080
 COPY ./obj/Docker/publish .
