--- a/WhackAMole.UWPClient/appSettings.json
+++ b/WhackAMole.UWPClient/appSettings.json
@@ -1,4 +1,6 @@
 ﻿{
-  "MoleEndpoint": "http://52.162.166.157:8080",
-  "AdminEndpoint": "http://52.240.158.227:8080"
+  "MoleEndpoint": "http://40.113.219.157",
+  "AdminEndpoint": "http://40.113.219.157/admin",
+  "MoleEndpointOld": "http://52.162.166.157:8080",
+  "AdminEndpointOld": "http://52.240.158.227:8080"
 }
