--- a/WhackAMole.KubeAdmin/appsettings.Development.json
+++ b/WhackAMole.KubeAdmin/appsettings.Development.json
@@ -6,5 +6,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "Kube": {
+    "BaseApiUrl": "https://mtcden-sandbox-demo-whack-a-mole-0a3e90cc.hcp.centralus.azmk8s.io"
   }
 }
