--- a/MoleDeploy.UWPClient/appsettings.json
+++ b/MoleDeploy.UWPClient/appsettings.json
@@ -1,4 +1,4 @@
 ﻿{
-  "SignalREndpoint": "https://mtcden-sandbox-demo-whack-a-mole.service.signalr.net",
-  "SignalRAccessKey": "HBCBkIRl/CqVBMbG9VUzrQ4Cp9msXAVBKVPeCzpEkR0="
+  "SignalREndpoint": "",
+  "SignalRAccessKey": ""
 }
