add default app settings for kubeadmin

--- a/WhackAMole.KubeAdmin/appsettings.Development.json
+++ b/WhackAMole.KubeAdmin/appsettings.Development.json
@@ -8,6 +8,6 @@
     }
   },
   "Kube": {
-    "BaseApiUrl": "https://mtcden-sandbox-demo-whack-a-mole-0a3e90cc.hcp.centralus.azmk8s.io"
+    "BaseApiUrl": ""
   }
 }
