add default settings for whackamole client

--- a/WhackAMole.UWPClient/appSettings.json
+++ b/WhackAMole.UWPClient/appSettings.json
@@ -1,4 +1,4 @@
 ﻿{
-  "MoleEndpoint": "http://40.113.219.157",
-  "AdminEndpoint": "http://40.113.219.157/admin"
+  "MoleEndpoint": "",
+  "AdminEndpoint": ""
 }
