remove more keys

--- a/WhackAMole.KubeAdmin/WhackAMole.KubeAdmin.csproj
+++ b/WhackAMole.KubeAdmin/WhackAMole.KubeAdmin.csproj
@@ -8,11 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <_ContentIncludedByDefault Remove="appsettings.Production.json" />
+    <Compile Remove="wwwroot\**" />
+    <Content Remove="wwwroot\**" />
+    <EmbeddedResource Remove="wwwroot\**" />
+    <None Remove="wwwroot\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
+    <_ContentIncludedByDefault Remove="appsettings.Production.json" />
   </ItemGroup>
 
   <ItemGroup>
