--- a/helm/mole-cloud/templates/deployment.yaml
+++ b/helm/mole-cloud/templates/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: {{ .Release.Name }}
 spec:
-  replicas: {{.Values.app.Replicas}}
+  replicas: {{.Values.app.replicas}}
   selector:
     matchLabels:
       app: {{.Values.app.name}}
