--- a/MoleDeploy.UWPClient/MoleDeploy.UWPClient.csproj
+++ b/MoleDeploy.UWPClient/MoleDeploy.UWPClient.csproj
@@ -116,6 +116,8 @@
     <Content Include="Assets\kubernetes.png" />
     <Content Include="Assets\multiple-cogs.png" />
     <Content Include="Assets\release.png" />
+    <Content Include="Assets\vsts-icon.png" />
+    <Content Include="Assets\vsts-logo.png" />
     <Content Include="Assets\vstsbackground.png" />
     <Content Include="Assets\vstsicon.png" />
     <Content Include="Assets\vstslogo.png" />
@@ -135,6 +137,10 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Page Include="MainPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Themes\Generic.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
