--- a/helm/mole-cloud/templates/deployment.yaml
+++ b/helm/mole-cloud/templates/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: {{ .Release.Name }}
+  name: {{.Values.app.name}}
 spec:
   replicas: {{.Values.app.replicas}}
   selector:
