remove default color from arg in dockerfile

--- a/WhackAMole.MoleCloud/Dockerfile
+++ b/WhackAMole.MoleCloud/Dockerfile
@@ -1,5 +1,5 @@
 FROM microsoft/dotnet:2.1.1-aspnetcore-runtime-stretch-slim
-ARG pod_color=7FC9FF
+ARG pod_color
 ENV POD_COLOR=$pod_color
 WORKDIR /app
 EXPOSE 8080
