--- a/WhackAMole.UWPClient/appSettings.json
+++ b/WhackAMole.UWPClient/appSettings.json
@@ -1,4 +1,4 @@
 ﻿{
-  "MoleEndpoint": "",
-  "AdminEndpoint": ""
+  "MoleEndpoint": "http://40.113.200.170:8080",
+  "AdminEndpoint": "http://104.43.211.80:8080"
 }
