--- a/src/WhackAMole.KubeAdmin/azure-pipelines.yml
+++ b/src/WhackAMole.KubeAdmin/azure-pipelines.yml
@@ -32,7 +32,7 @@ steps:
       docker push $(container_image_name)
       docker push latest
 
-      cp ../helm/kube-admin $(build.artifactstagingdirectory)/helm/kube-admin -R
+      cp ../../helm/kube-admin $(build.artifactstagingdirectory)/helm/kube-admin -R
 
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifact: drop'
