--- a/src/kube-admin.ci.yml
+++ b/src/kube-admin.ci.yml
@@ -14,8 +14,7 @@ trigger:
 
 variables:
   acr_name: mtcdensandboxdemo
-  registry: $(acr_name).azurecr.io
-  image_name: $(registry)/$(Build.Repository.Name)/kube-admin:$(Build.BuildNumber)
+  image_name: $(acr_name).azurecr.io/$(Build.Repository.Name)/kube-admin:$(Build.BuildNumber)
 
 
 steps:
@@ -25,12 +24,7 @@ steps:
     azureSubscription: 'MTC Denver Sandbox (b0e04a4a-a321-4b66-b8fd-13715262ba3c)'
     scriptLocation: inlineScript
     inlineScript: |
-      cd src/WhackAMole.KubeAdmin
-      dotnet publish WhackAMole.KubeAdmin.csproj -c Release -o "./obj/Docker/Publish"
-      az acr-build --registry $(acr_name) --image $(image_name)
-
-      cd ../../
-
+      az acr-build --registry $(acr_name) --image $(image_name) -f Dockerfile.KubeAdmin
       helm package .charts/kube-admin --version $(Build.BuildNumber)
       az acr helm push -n $(acr_name) kube-admin-$(Build.BuildNumber).tgz
 
