Update KubeAdmin deploy file

--- a/src/kube-admin.ci.yml
+++ b/src/kube-admin.ci.yml
@@ -7,6 +7,7 @@ trigger:
   branches: 
     include:
       - master
+      - feature/terraform
   paths:
     include:
       - src/WhackAMole.KubeAdmin
