Update KubeAdmin deploy file

--- a/src/kube-admin.ci.yml
+++ b/src/kube-admin.ci.yml
@@ -17,7 +17,7 @@ trigger:
 
 variables:
   acr_name: mtcdensandboxdemo
-  image_name: $(acr_name).azurecr.io/$(Build.Repository.Name)/kube-admin:$(Build.BuildNumber)
+  image_name: $(Build.Repository.Name)/kube-admin:$(Build.BuildNumber)
 
 
 steps:
@@ -29,7 +29,7 @@ steps:
     inlineScript: |
       cd src
       az acr build --registry $(acr_name) --image $(image_name) -f Dockerfile.KubeAdmin .
-      helm package .charts/kube-admin --version $(Build.BuildNumber)
+      helm package ../charts/kube-admin --version $(Build.BuildNumber)
       az acr helm push -n $(acr_name) kube-admin-$(Build.BuildNumber).tgz
 
 - task: PublishBuildArtifacts@1
