--- a/src/kube-admin.ci.yml
+++ b/src/kube-admin.ci.yml
@@ -23,6 +23,7 @@ variables:
 steps:
 - task: AzureCLI@1
   displayName: 'Azure CLI '
+  failOnStandardError: true
   inputs:
     azureSubscription: 'MTC Denver Sandbox (b0e04a4a-a321-4b66-b8fd-13715262ba3c)'
     scriptLocation: inlineScript
