--- a/src/mole-cloud.ci.yml
+++ b/src/mole-cloud.ci.yml
@@ -28,6 +28,7 @@ steps:
     failOnStandardError: true
     inlineScript: |
       az acr build -r $(acr_name) -t $(image_name) -f ./src/Dockerfile.MoleCloud ./src
+      helm init --client-only
       helm package charts/mole-cloud --version $(Build.BuildNumber)
       az acr helm push -n $(acr_name) mole-cloud-$(Build.BuildNumber).tgz
 
