--- a/src/test.ci.yml
+++ b/src/test.ci.yml
@@ -11,5 +11,8 @@ steps:
     scriptLocation: inlineScript
     failOnStandardError: true
     inlineScript: |
-      ls
+      # Package the helm chart and push it to ACR
+      helm init --client-only
+      helm package charts/mole-cloud --version $(Build.BuildNumber)
+      az acr helm push -n $(acr_name) mole-cloud-$(Build.BuildNumber).tgz
 
