more testing of broken build step

--- a/src/kube-admin.ci.yml
+++ b/src/kube-admin.ci.yml
@@ -28,10 +28,9 @@ steps:
     failOnStandardError: true
     inlineScript: |
       # User ACR to build and tag our container
-      az acr build -r $(acr_name) -t $(image_name) -f ./src/Dockerfile.KubeAdmin ./src
+      az acr build -r $(acr_name) -t $(image_name) -f ./src/Dockerfile.KubeAdmin ./src > docker.log
 
       # Package the helm chart and push it to ACR
       helm init --client-only
       helm package charts/kube-admin --version $(Build.BuildNumber)
       az acr helm push -n $(acr_name) kube-admin-$(Build.BuildNumber).tgz
-
