--- a/src/kube-admin.ci.yml
+++ b/src/kube-admin.ci.yml
@@ -29,8 +29,14 @@ steps:
     inlineScript: |
       # User ACR to build and tag our container
       az acr build -r $(acr_name) -t $(image_name) -f ./src/Dockerfile.KubeAdmin ./src >> build.log
+      echo ACR BUILD - $?
 
       # Package the helm chart and push it to ACR
       helm init --client-only >> build.log
+      echo HELM INIT - $?
+
       helm package charts/kube-admin --version $(Build.BuildNumber) >> build.log
+      echo HELM PACKAGE - $?
+
       az acr helm push -n $(acr_name) kube-admin-$(Build.BuildNumber).tgz >> build.log
+      echo HELM PUSH - $?
