--- a/azure-pipelines.kube-admin.yml
+++ b/azure-pipelines.kube-admin.yml
@@ -13,7 +13,7 @@ trigger:
       - src/WhackAMole.KubeAdmin
       - src/WhackAMole.KubeServices
       - src/Dockerfile.KubeAdmin
-      - src/kube-admin.ci.yml
+      - azure-pipelines.kube-admin.yml
 
 variables:
   acr_name: mtcdensandboxdemo
