--- a/charts/mole-cloud/templates/ingress.yaml
+++ b/charts/mole-cloud/templates/ingress.yaml
@@ -6,6 +6,7 @@ metadata:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    kubernetes.io/ingress.class: addon-http-application-routing
 spec:
   rules:
   - http:
