--- a/src/Dockerfile.MoleCloud
+++ b/src/Dockerfile.MoleCloud
@@ -7,7 +7,7 @@ RUN dotnet restore ./WhackAMole.MoleCloud/WhackAMole.MoleCloud.csproj
 
 COPY . ./
 
-RUN dotnet publish ./WhackAMole.MoleCloud/WhackAMole.MoleCloud.csproj -c Release -o out
+RUN dotnet publish ./WhackAMole.MoleCloud/WhackAMole.MoleCloud.csproj -c Debug -o out
 
 
 FROM microsoft/dotnet:aspnetcore-runtime
