--- a/src/Dockerfile.MoleCloud
+++ b/src/Dockerfile.MoleCloud
@@ -1,3 +1,5 @@
+ARG pod_color=c0ffee
+
 FROM microsoft/dotnet:sdk AS build-env
 WORKDIR /app
 
@@ -11,11 +13,11 @@ RUN dotnet publish ./WhackAMole.MoleCloud/WhackAMole.MoleCloud.csproj -c Debug -
 
 
 FROM microsoft/dotnet:aspnetcore-runtime
-WORKDIR /app
-
-EXPOSE 8080
-ARG pod_color
 ENV POD_COLOR=$pod_color
+
+WORKDIR /app
+EXPOSE 8080
+
 
 COPY --from=build-env /app/WhackAMole.MoleCloud/out .
 ENTRYPOINT ["dotnet", "WhackAMole.MoleCloud.dll", "--urls", "http://*:8080"]
