--- a/azure-pipelines.mole-cloud.yml
+++ b/azure-pipelines.mole-cloud.yml
@@ -30,7 +30,7 @@ steps:
   displayName: 'Update node count'
   inputs:
     PathToFile: 'charts/mole-cloud/values.yaml'
-    RegEx: 'replicas:[.]*'
+    RegEx: 'replicas:.*'
     ValueToReplace: 'replicas: $(pod_replica_count)'
 
 # Update image repository in helm chart
@@ -38,7 +38,7 @@ steps:
   displayName: 'Update image repository'
   inputs:
     PathToFile: 'charts/mole-cloud/values.yaml'
-    RegEx: 'repository:[.]*'
+    RegEx: 'repository:.*'
     ValueToReplace: 'repository: $(repository)'
 
 # Update image tag in helm chart
@@ -46,7 +46,7 @@ steps:
   displayName: 'Update image tag'
   inputs:
     PathToFile: 'charts/mole-cloud/values.yaml'
-    RegEx: 'tag:[.*]'
+    RegEx: 'tag:.*'
     ValueToReplace: 'tag: $(Build.BuildNumber)'
 
 # Build, package and push
