--- a/src/MoleDeploy.UWPClient/MoleDeploy.UWPClient.csproj
+++ b/src/MoleDeploy.UWPClient/MoleDeploy.UWPClient.csproj
@@ -25,7 +25,7 @@
     <AppInstallerUpdateFrequency>1</AppInstallerUpdateFrequency>
     <AppInstallerCheckForUpdateFrequency>OnApplicationRun</AppInstallerCheckForUpdateFrequency>
     <AppxSymbolPackageEnabled>False</AppxSymbolPackageEnabled>
-    <AppxPackageDir>D:\whack-a-mole-den\</AppxPackageDir>
+    <AppxPackageDir>D:\mole-cloud</AppxPackageDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
