refactor mole cloud into two builds

--- a/charts/mole-cloud/templates/deployment.yaml
+++ b/charts/mole-cloud/templates/deployment.yaml
@@ -16,6 +16,9 @@ spec:
       - name: {{.Values.app.name}}
         image: {{.Values.image.repository}}:{{.Values.image.tag}}
         imagePullPolicy: IfNotPresent
+        env:          
+          - name: "POD_COLOR"
+            value: {{.Values.pod_color}}
         ports:
         - containerPort: 8080
           protocol: TCP
