--- a/azure-pipelines.mole-cloud-chart.yml
+++ b/azure-pipelines.mole-cloud-chart.yml
@@ -1,18 +1,5 @@
 name: $(Date:yyyyMMdd)$(Rev:.r)
 
-trigger:
-  branches: 
-    include:
-      - master
-      - feature/terraform
-  paths:
-    include:
-      - src/WhackAMole.MoleCloud
-      - src/WhackAMole.KubeServices
-      - src/Dockerfile.MoleCloud
-      - charts/mole-cloud
-      - azure-pipelines.mole-cloud.yml
-
 variables:
   repository: whack-a-mole/mole-cloud
   tag: $(Build.BuildNumber)
@@ -49,18 +36,21 @@ steps:
     RegEx: 'tag:.*'
     ValueToReplace: 'tag: "$(Build.BuildNumber)"'
 
+# Update pod_color tag in helm chart
+- task: kasunkodagoda.regex-match-replace.regex-match-replace.RegExMatchReplace@2
+  displayName: 'Update image tag'
+  inputs:
+    PathToFile: 'charts/mole-cloud/values.yaml'
+    RegEx: 'tag:.*'
+    ValueToReplace: 'tag: "$(Build.BuildNumber)"'
+
 # Build, package and push
 - task: AzureCLI@1
   displayName: 'Azure CLI '
   inputs:
     azureSubscription: 'MTC Denver Sandbox (b0e04a4a-a321-4b66-b8fd-13715262ba3c)'
     scriptLocation: inlineScript
-    inlineScript: |
-
-      # User ACR to build and tag our container
-      curl -d "{\"State\": 1, \"Message\": \"Executing Azure Container Registry Build...\", \"ServiceName\": \"$(service_name)\"}" -X POST $(report_url)
-      az acr build -r $(acr_name) -t $(repository):$(tag) -f ./src/Dockerfile.MoleCloud --build-arg "pod_color=$(pod_color)" ./src
-      
+    inlineScript: |      
       # Package the helm chart and push it to ACR
       curl -d "{\"State\": 2, \"Message\": \"Initializing Helm...\", \"ServiceName\": \"$(service_name)\"}" -X POST $(report_url)
       helm init --client-only
