--- a/src/WhackAMole.UWPClient/appSettings.json
+++ b/src/WhackAMole.UWPClient/appSettings.json
@@ -1,4 +1,5 @@
 ﻿{
-  "MoleEndpoint": "",
-  "AdminEndpoint": ""
+  "MoleEndpoint": "http://52.247.209.171",
+  "AdminEndpoint": "http://52.247.209.171/admin",
+  "ServiceName": "mtcden-mole-cloud"
 }
